style: 调整pom.xml文件格式